--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MadBudget</string>
+    <string name="recipe_button">Recipes</string>
+    <string name="create_recipe_button">Create Recipes</string>
 </resources>
