--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">MadBudget</string>
     <string name="recipe_button">Recipes</string>
     <string name="create_recipe_button">Create Recipes</string>
+    <string-array name="ingredient_array">
+        <item>Bacon</item>
+        <item>Mountain Dew</item>
+        <item>Doritos</item>
+    </string-array>
 </resources>
