--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MadBudget</string>
     <string name="recipe_button">Recipes</string>
     <string name="create_recipe_button">Create Recipes</string>
+    <string name="search_button">Search</string>
+    <string name="search_text">Write here</string>
 </resources>
