--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
         <item>Hockey 5</item>
         <item>Swimming 5</item>
     </array>
+    <string name="title_activity_maps">Map</string>
 
 
 </resources>
