--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MadBudget</string>
+    <string name="app_name">NemIndkøb</string>
     <string name="recipe_button">Recipes</string>
 
     <string name="title_activity_maps">Map</string>
